Defined color codes for specific text display, and modified some BU::DechoHighlight() function calls

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -90,17 +90,26 @@ __BU_MAIN_COLOR_CODE_VIOLET='177'
 # Error text display color				| Default color : Red
 __BU_MAIN_COLOR_CODE_ERROR="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_RED")"
 
+# Function name display color           | Default color : Purple
+__BU_MAIN_COLOR_CODE_FUNCTION="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_PURPLE")"
+
 # Highlighted text display color		| Default color : Cyan
 __BU_MAIN_COLOR_CODE_HIGHLIGHT="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_CYAN")"
 
 # Newstep text display color            | Default color : Orange
-__BU_MAIN_COLOR_NEWSTEP="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_ORANGE")"
+__BU_MAIN_COLOR_CODE_NEWSTEP="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_ORANGE")"
 
-# Reset color to terminal's default text color | Always "tput sgr0"
+# Directories and files paths display color     | Default color : Lime
+__BU_MAIN_COLOR_CODE_PATH="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_LIME")"
+
+# Reset color to terminal's default text color  | Always "tput sgr0"
 __BU_MAIN_COLOR_CODE_RESET="$(tput sgr0)"
 
 # Success text display color			| Default color : Green
 __BU_MAIN_COLOR_CODE_SUCCESS="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_GREEN")"
+
+# Variable, parameter or argument name  | Default color : Orange
+__BU_MAIN_COLOR_CODE_VAR="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_ORANGE")"
 
 # Warning text display color			| Default color : Yellow
 __BU_MAIN_COLOR_CODE_WARNING="$(CheckTextColor "$__BU_MAIN_COLOR_CODE_YELLOW")"
@@ -143,10 +152,14 @@ __BU_MAIN_COLOR_VIOLET="$(CheckTextColor	"$__BU_MAIN_COLOR_CODE_VIOLET")"	# Viol
 
 
 # Specific colors encoding.
-__BU_MAIN_COLOR_ERROR="$__BU_MAIN_COLOR_CODE_ERROR"							# Error text display color
-__BU_MAIN_COLOR_HIGHLIGHT="$__BU_MAIN_COLOR_CODE_HIGHLIGHT"					# Highlighted text display color
-__BU_MAIN_COLOR_RESET="$__BU_MAIN_COLOR_CODE_RESET"							# Reset color to terminal's default text color
-__BU_MAIN_COLOR_SUCCESS="$__BU_MAIN_COLOR_CODE_SUCCESS"						# Success text display color
-__BU_MAIN_COLOR_WARNING="$__BU_MAIN_COLOR_CODE_WARNING"						# Warning text display color
+__BU_MAIN_COLOR_ERROR="$__BU_MAIN_COLOR_CODE_ERROR"							# Error text display color.
+__BU_MAIN_COLOR_FUNCTION="$__BU_MAIN_COLOR_CODE_FUNCTION"                   # Function name display color
+__BU_MAIN_COLOR_HIGHLIGHT="$__BU_MAIN_COLOR_CODE_HIGHLIGHT"					# Highlighted text display color.
+__BU_MAIN_COLOR_NEWSTEP="$__BU_MAIN_COLOR_CODE_NEWSTEP"                     # New setps text display color.
+__BU_MAIN_COLOR_PATH="$__BU_MAIN_COLOR_CODE_PATH"                           # Directories and files paths display color.
+__BU_MAIN_COLOR_RESET="$__BU_MAIN_COLOR_CODE_RESET"							# Reset color to terminal's default text color.
+__BU_MAIN_COLOR_SUCCESS="$__BU_MAIN_COLOR_CODE_SUCCESS"						# Success text display color.
+__BU_MAIN_COLOR_VAR="$__BU_MAIN_COLOR_CODE_VAR"                             # Variable, parameter or argument name.
+__BU_MAIN_COLOR_WARNING="$__BU_MAIN_COLOR_CODE_WARNING"						# Warning text display color.
 
 # -----------------------------------------------
