Added the $__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY global value to check which new default values have to be modified

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -111,7 +111,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_BIN_DIR_PATH' "$__B
 
 # Bash Utils configuration files folder		|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_CONF_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MODULE_UTILS_CONFIG_MODULES_DIR" "$(BU::ModuleInit::GetModuleName "${BASH_SOURCE[0]}")")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_DIR_PATH' "$__BU_MAIN_MODULE_CONF_DIR_PATH"   'Path' "This global variable stores the path of the main module's configurations directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_DIR_PATH' "$__BU_MAIN_MODULE_CONF_DIR_PATH"   'Path' "This global variable stores the path of the « main » module's configurations directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # Bash Utils documentation folder			|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_MODULE_DOCS_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_ROOT_DIR_PATH" "docs")";	
@@ -163,7 +163,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH
 
 # Bash Utils library module's directory             |	Default parent folder --> "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH/"
 __BU_MAIN_MODULE_LIB_MOD_DIR_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_LIB_FUNCTS_DIR_PATH" "$(BU::ModuleInit::GetModuleName "${BASH_SOURCE[0]}")")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_MOD_DIR_PATH' "$__BU_MAIN_MODULE_LIB_MOD_DIR_PATH" 'Path' "This global variable stores the path of the main module's functions folder" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_MOD_DIR_PATH' "$__BU_MAIN_MODULE_LIB_MOD_DIR_PATH" 'Path' "This global variable stores the path of the « main » module's functions folder" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # -----------------------------------------------
 
@@ -177,23 +177,23 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_MOD_DIR_PATH' "
 
 # Bash Utils color encoding variables configuration file.
 __BU_MAIN_MODULE_CONF_COLORS_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Colors.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH' "$__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH" 'Path' "This global variable stores the path of the main module's « Colors.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH' "$__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH" 'Path' "This global variable stores the path of the « main » module's « Colors.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # Project's initialization variables.
 __BU_MAIN_MODULE_CONF_INIT_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Project.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_INIT_FILE_PATH' "$__BU_MAIN_MODULE_CONF_INIT_FILE_PATH" 'Path' "This global variable stores the path of the main module's « Project.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_INIT_FILE_PATH' "$__BU_MAIN_MODULE_CONF_INIT_FILE_PATH" 'Path' "This global variable stores the path of the « main » module's « Project.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # Bash Utils status variables configuration file.
 __BU_MAIN_MODULE_CONF_STATUS_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Status.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH' "$__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH" 'Path' "This global variable stores the path of the main module's « Status.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH' "$__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH" 'Path' "This global variable stores the path of the « main » module's « Status.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # Bash Utils text variables configuration file.
 __BU_MAIN_MODULE_CONF_TEXT_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Text.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH' "$__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" 'Path' "This global variable stores the path of the main module's « Text.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH' "$__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" 'Path' "This global variable stores the path of the « main » module's « Text.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # Bash Utils time variables configuration file.
 __BU_MAIN_MODULE_CONF_TIME_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MAIN_MODULE_CONF_DIR_PATH" "Time.conf")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_TIME_FILE_PATH' "$__BU_MAIN_MODULE_CONF_TIME_FILE_PATH" 'Path' "This global variable stores the path of the main module's « Time.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_TIME_FILE_PATH' "$__BU_MAIN_MODULE_CONF_TIME_FILE_PATH" 'Path' "This global variable stores the path of the « main » module's « Time.conf » configuration file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # -----------------------------------------------
 
@@ -201,7 +201,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_TIME_FILE_PATH
 
 # Module's initializer file.
 __BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH="$(BU::ModuleInit::FindPath "$__BU_MODULE_UTILS_MODULES_DIR" "Initializer.sh")";
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH' "$__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH" 'Path' "This global variable stores the path of the main module's initializer script" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH' "$__BU_MAIN_MODULE_LIB_FILE_INITIALIZER_FILE_PATH" 'Path' "This global variable stores the path of the « main » module's initializer script" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # -----------------------------------------------
 
@@ -209,7 +209,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILE_INITIALIZE
 
 # Main module's library functions folder's path.
 __BU_MAIN_MODULE_FUNCTIONS_FILES_PATH=("$__BU_MAIN_MODULE_LIB_MOD_DIR_PATH/"*.lib);
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH' "$__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH" 'Array' "This array stores the path of each main module's functions folder's library « .lib » file TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH' "$__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH" 'Array' "This array stores the path of each « main » module's functions folder's library « .lib » file TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # -----------------------------------------------
 
@@ -219,6 +219,14 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PAT
 #### INITALIZATION VARIABLES
 
 ## INITIALIZATION VARIABLES DECLARATIONS
+
+# Defining an array of parameters in order to store the modified global status variables values,
+# in order to check which status variables values have to be changed to their new default value,
+# after the main module's initialization.
+
+# It MUST NOT store any value.
+__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY=()
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY' "$__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the global status variables values modified as the « main » module's by the user"
 
 # Array of strings, to display in the log file with the date.
 # WARNING : this array is obsolete and will be removed in a next update.
@@ -230,7 +238,7 @@ __BU_MAIN_MODULE_STR_ARRAY_LOG_DATE=()
 
 # Defining an associative array to store each sourced library file's path.
 __BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY=();
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED main module's library files" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « main » module's library files" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # -----------------------------------------------
 
@@ -238,7 +246,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILES_PATH_ARRA
 
 # Defining an associative array to store each sourced configuration file's path.
 __BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY=();
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED main module's configuration files" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the path of each SOURCED « main » module's configuration files" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # Storing the configuration files path variable values into an array to source, print and add easier into the "a_config_files_path" associative array.
 # Those files are, respectly, the :
@@ -257,7 +265,7 @@ __BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY=("$__BU_MAIN_MODULE_CONF_INIT_FILE
     "$__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" \
     "$__BU_MAIN_MODULE_CONF_TIME_FILE_PATH");
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY" 'Array' "This array stores the path of each main module's configuration files TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY" 'Array' "This array stores the path of each « main » module's configuration files TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # -----------------------------------------------
 
