Called the BU::ModuleInit::DisplayInitGlobalVarsInfos() function in the Colors.conf file

--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -13,8 +13,8 @@
 __BU_MAIN_PROJECT_FILE_NAME=$(basename "$0");                    # Project file's name.
 __BU_MAIN_PROJECT_NAME=$(basename "$0" | cut -f 1 -d '.');       # Name of the project (project file's name without its file extension).
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_FILE_NAME' "$__BU_MAIN_PROJECT_FILE_NAME"	'String' "This global variable stores the name of the main project's script (the one executed right now), with it's file extension" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_NAME' "$__BU_MAIN_PROJECT_NAME"			'String' "This global variable stores the name of the main project's script (the one executed right now), without it's file extension" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_FILE_NAME' "$__BU_MAIN_PROJECT_FILE_NAME"	'String' "This global variable stores the name of the main project's script (the one executed right now), with it's file extension" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_NAME' "$__BU_MAIN_PROJECT_NAME"			'String' "This global variable stores the name of the main project's script (the one executed right now), without it's file extension" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))"
 
 function GetProjectFilePath()
 {
@@ -33,8 +33,8 @@ function GetProjectFilePath()
 __BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME="tmp";
 __BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH="$__BU_MAIN_ROOT_DIR_PATH/$__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME";
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME' "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME" 'Dir'	"This global variable stores the name of the project's temporary folder's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH' "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH" 'Path'	"This global variable stores the path to the project's temporary folder's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME' "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_NAME" 'Dir'	"This global variable stores the name of the project's temporary folder's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH' "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH" 'Path'	"This global variable stores the path to the project's temporary folder's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))"
 
 if [ ! -d "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH" ]; then
     mkdir -p "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH" || { echo >&2; echo "UNABLE TO CREATE THE PROJECT'S TEMPORARY FOLDER'S PARENT DIRECTORY « $__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH » !" >&2; echo >&2; exit 1; };
@@ -48,11 +48,11 @@ fi
 if [ "$EUID" -eq 0 ]; then
     __BU_MAIN_PROJECT_TMP_DIR_PATH="$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME - ROOT" # Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME - ROOT"
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PATH' "$__BU_MAIN_PROJECT_TMP_DIR_PATH" 'Path' "This global variable stores the path to the temporary folder" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
+    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PATH' "$__BU_MAIN_PROJECT_TMP_DIR_PATH" 'Path' "This global variable stores the path to the temporary folder" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))"
 else
     __BU_MAIN_PROJECT_TMP_DIR_PATH="$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME"        # Default --> "$__BU_MAIN_PROJECT_TMP_DIR_PARENT_PATH/$__BU_MAIN_PROJECT_NAME"
 
-    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PATH' "$__BU_MAIN_PROJECT_TMP_DIR_PATH" 'Path' "This global variable stores the path to the temporary folder (with super-user's privileges)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
+    BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_TMP_DIR_PATH' "$__BU_MAIN_PROJECT_TMP_DIR_PATH" 'Path' "This global variable stores the path to the temporary folder (with super-user's privileges)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))"
 fi
 
 # Project's file path.
@@ -78,20 +78,20 @@ __BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT="$__BU_MAIN_PROJECT_TMP_DIR_PATH"
 __BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME="colors.tmp"
 __BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH="$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT/$__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME"
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_PARENT' "$__BU_MAIN_PROJECT_LOG_DIR_PARENT"   'Path'      "This global variable stores the path to the parent directory of the project's log file's directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_NAME' "$__BU_MAIN_PROJECT_LOG_DIR_NAME"       'Dir'		"This global variable stores the name of the parent directory of the project's log file's directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_PATH' "$__BU_MAIN_PROJECT_LOG_DIR_PATH"       'Path'      "This global variable stores the path to the parent directory of the project's log file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_PARENT' "$__BU_MAIN_PROJECT_LOG_DIR_PARENT"   'Path'      "This global variable stores the path to the parent directory of the project's log file's directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-19 ))"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_NAME' "$__BU_MAIN_PROJECT_LOG_DIR_NAME"       'Dir'		"This global variable stores the name of the parent directory of the project's log file's directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-19 ))"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_DIR_PATH' "$__BU_MAIN_PROJECT_LOG_DIR_PATH"       'Path'      "This global variable stores the path to the parent directory of the project's log file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-19 ))"
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_PARENT' "$__BU_MAIN_PROJECT_LOG_FILE_PARENT" 'Path'      "This global variable stores the path to the project's log file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_NAME' "$__BU_MAIN_PROJECT_LOG_FILE_NAME"     'File'		"This global variable stores the name of the project's log file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_PATH' "$__BU_MAIN_PROJECT_LOG_FILE_PATH"     'Path'      "This global variable stores the path to the project's log path" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_PARENT' "$__BU_MAIN_PROJECT_LOG_FILE_PARENT" 'Path'      "This global variable stores the path to the project's log file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-20 ))"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_NAME' "$__BU_MAIN_PROJECT_LOG_FILE_NAME"     'File'		"This global variable stores the name of the project's log file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-20 ))"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_LOG_FILE_PATH' "$__BU_MAIN_PROJECT_LOG_FILE_PATH"     'Path'      "This global variable stores the path to the project's log path" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-20 ))"
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT" 'Path'      "This global variable stores the path to the echo debugging file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME"     'File'		"This global variable stores the name of the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH"     'Path'      "This global variable stores the path to the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PARENT" 'Path'      "This global variable stores the path to the echo debugging file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-21 ))"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_NAME"     'File'		"This global variable stores the name of the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-21 ))"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH' "$__BU_MAIN_PROJECT_ECHO_OUTPUT_FILE_PATH"     'Path'      "This global variable stores the path to the echo debugging file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-21 ))"
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT"   'Path'      "This global variable stores the path to the Decho color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME"       'File'		"This global variable stores the name of the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH"       'Path'      "This global variable stores the path to the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT' "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PARENT"   'Path'      "This global variable stores the path to the Decho color code file's parent directory" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-22 ))"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME' "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_NAME"       'File'		"This global variable stores the name of the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-22 ))"
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH' "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH"       'Path'      "This global variable stores the path to the Decho color code file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-22 ))"
 
 # -----------------------------------------------
