Finished adding the two forgotten colors

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -36,10 +36,10 @@ function BU::Main::ModConfig::Colors::CheckTextColor()
 
                 kill "$$"
 
-#               return 0
+#               return 0;
                 }
         else
-            echo -ne "\e[38;5;$1m"; return 0
+            echo -ne "\e[38;5;$1m"; return 0;
         fi
     else
         return 1
