Removed the __BU_MAIN_STAT_PRINT_INIT_LOG global status variable's value and the remaining mentions of the __BU_MAIN_STAT_TRANSLATED status global variable

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -240,11 +240,7 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PAT
 
 # It MUST NOT store any value.
 __BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY=()
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY' "$__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the global status variables values modified as the « main » module's by the user"
-
-# Array of strings, to display in the log file with the date.
-# WARNING : this array is obsolete and will be removed in a next update.
-__BU_MAIN_MODULE_STR_ARRAY_LOG_DATE=()
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY' "$__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY" 'Array' "This array (MUST BE EMPTY BY DEFAULT) stores the global status variables values modified as the « main » module's by the user" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$LINENO";
 
 # -----------------------------------------------
 
