--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -261,13 +261,15 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_A
 # The "ProjectInit.conf" file MUST be sourced first, then the "ProjectStatus.conf" file MUST be sourced in the second.
 # Unless otherwise stated, the other configuration files may be sourced in any order.
 
-__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY=("$__BU_MAIN_MODULE_CONF_INIT_FILE_PATH" \
+__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY=();
+
+__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("$__BU_MAIN_MODULE_CONF_INIT_FILE_PATH" \
     "$__BU_MAIN_MODULE_CONF_STATUS_FILE_PATH" \
     "$__BU_MAIN_MODULE_CONF_COLORS_FILE_PATH" \
     "$__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" \
     "$__BU_MAIN_MODULE_CONF_TIME_FILE_PATH");
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY" 'Array' "This array stores the path of each « main » module's configuration files TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY" 'Array' "This array stores the path of each « main » module's configuration files TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))"; "$__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY"
 
 # -----------------------------------------------
 
