--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -32,11 +32,9 @@ function BU::Main::ModConfig::Colors::CheckTextColor()
             [ "$?" -ne 0 ] && {
                 echo -e >&2; echo -e "The $(BU::Main::Checkings::CheckFilePathExists "$__BU_MAIN_PROJECT_COLOR_CODE_FILE_PATH") (color.tmp) file doesn't exists" >&2; echo -e >&2;
 
-                exit 1
+                return 1
 
                 kill "$$"
-
-#               return 0;
                 }
         else
             echo -ne "\e[38;5;$1m"; return 0;
