The BU::ModuleInit::DisplayInitGlobalVarsInfos() function's array processor is working as intended (listing the values with their index)

--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -269,7 +269,9 @@ __BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("$__BU_MAIN_MODULE_CONF_INIT_FIL
     "$__BU_MAIN_MODULE_CONF_TEXT_FILE_PATH" \
     "$__BU_MAIN_MODULE_CONF_TIME_FILE_PATH");
 
-BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY" 'Array' "This array stores the path of each « main » module's configuration files TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))" "$__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY";
+BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "$__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY" 'Array' "This array stores the path of each « main » module's configuration files TO SOURCE (NOT SOURCED YET)" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-4 ))" "${__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY[@]}";
+
+exit 0
 
 # -----------------------------------------------
 
