--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -134,19 +134,19 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_FUNCTION' "$__B
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Highlighted text display color		| Default color : Cyan
-__BU_MAIN_COLOR_CODE_HIGHLIGHT="$(BU::Main::ModConfig::Colors::CheckTextColor "$__BU_MAIN_COLOR_CODE_CYAN")";
+__BU_MAIN_COLOR_CODE_HIGHLIGHT="$__BU_MAIN_COLOR_CODE_CYAN";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_HIGHLIGHT' "$__BU_MAIN_COLOR_CODE_HIGHLIGHT"	'Int' "This variable stores the color code for the text highlighting" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Newstep text display color            | Default color : Orange
-__BU_MAIN_COLOR_CODE_NEWSTEP="$(BU::Main::ModConfig::Colors::CheckTextColor "$__BU_MAIN_COLOR_CODE_ORANGE")";
+__BU_MAIN_COLOR_CODE_NEWSTEP="$__BU_MAIN_COLOR_CODE_ORANGE";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_NEWSTEP' "$__BU_MAIN_COLOR_CODE_NEWSTEP"	'Int' "This variable stores the color code for the new steps messages" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Directories and files paths display color     | Default color : Lime
-__BU_MAIN_COLOR_CODE_PATH="$(BU::Main::ModConfig::Colors::CheckTextColor "$__BU_MAIN_COLOR_CODE_LIME")";
+__BU_MAIN_COLOR_CODE_PATH="$__BU_MAIN_COLOR_CODE_LIME";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_PATH' "$__BU_MAIN_COLOR_CODE_PATH"			'Int' "This variable stores the color code for the paths highlighting" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
@@ -158,19 +158,19 @@ BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_RESET' "$__BU_M
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Success text display color			| Default color : Green
-__BU_MAIN_COLOR_CODE_SUCCESS="$(BU::Main::ModConfig::Colors::CheckTextColor "$__BU_MAIN_COLOR_CODE_GREEN")";
+__BU_MAIN_COLOR_CODE_SUCCESS="__BU_MAIN_COLOR_CODE_GREEN";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_SUCCESS' "$__BU_MAIN_COLOR_CODE_SUCCESS"	'Int' "This variable stores the color code for the succes messages" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Variable, parameter or argument name  | Default color : Orange
-__BU_MAIN_COLOR_CODE_VAR="$(BU::Main::ModConfig::Colors::CheckTextColor "$__BU_MAIN_COLOR_CODE_ORANGE")";
+__BU_MAIN_COLOR_CODE_VAR="$__BU_MAIN_COLOR_CODE_ORANGE";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_VAR' "$__BU_MAIN_COLOR_CODE_VAR"			'Int' "This variable stores the color code for the variables names highlighting" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Warning text display color			| Default color : Yellow
-__BU_MAIN_COLOR_CODE_WARNING="$(BU::Main::ModConfig::Colors::CheckTextColor "$__BU_MAIN_COLOR_CODE_YELLOW")";
+__BU_MAIN_COLOR_CODE_WARNING="$__BU_MAIN_COLOR_CODE_YELLOW";
 
 BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_WARNING' "$__BU_MAIN_COLOR_CODE_WARNING"	'Int' "This variable stores the color code for the warning messages" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
@@ -244,15 +244,15 @@ printf "%s" "$__BU_MAIN_COLOR_YELLOW";		BU::ModuleInit::DisplayInitGlobalVarsInf
 
 
 # Specific colors encoding.
-__BU_MAIN_COLOR_ERROR="$__BU_MAIN_COLOR_CODE_ERROR";						# Error text display color.
-__BU_MAIN_COLOR_FUNCTION="$__BU_MAIN_COLOR_CODE_FUNCTION";                  # Function name display color
-__BU_MAIN_COLOR_HIGHLIGHT="$__BU_MAIN_COLOR_CODE_HIGHLIGHT";				# Highlighted text display color.
-__BU_MAIN_COLOR_NEWSTEP="$__BU_MAIN_COLOR_CODE_NEWSTEP";                    # New setps text display color.
-__BU_MAIN_COLOR_PATH="$__BU_MAIN_COLOR_CODE_PATH";                          # Directories and files paths display color.
-__BU_MAIN_COLOR_RESET="$__BU_MAIN_COLOR_CODE_RESET";						# Reset color to terminal's default text color.
-__BU_MAIN_COLOR_SUCCESS="$__BU_MAIN_COLOR_CODE_SUCCESS";					# Success text display color.
-__BU_MAIN_COLOR_VAR="$__BU_MAIN_COLOR_CODE_VAR";                            # Variable, parameter or argument name.
-__BU_MAIN_COLOR_WARNING="$__BU_MAIN_COLOR_CODE_WARNING";					# Warning text display color.
+__BU_MAIN_COLOR_ERROR="$(BU::Main::ModConfig::Colors::CheckTextColor        "$__BU_MAIN_COLOR_CODE_ERROR")";        # Error text display color.
+__BU_MAIN_COLOR_FUNCTION="$(BU::Main::ModConfig::Colors::CheckTextColor     "$__BU_MAIN_COLOR_CODE_FUNCTION")";     # Function name display color
+__BU_MAIN_COLOR_HIGHLIGHT="$(BU::Main::ModConfig::Colors::CheckTextColor    "$__BU_MAIN_COLOR_CODE_HIGHLIGHT")";    # Highlighted text display color.
+__BU_MAIN_COLOR_NEWSTEP="$(BU::Main::ModConfig::Colors::CheckTextColor      "$__BU_MAIN_COLOR_CODE_NEWSTEP")";      # New setps text display color.
+__BU_MAIN_COLOR_PATH="$(BU::Main::ModConfig::Colors::CheckTextColor         "$__BU_MAIN_COLOR_CODE_PATH")";         # Directories and files paths display color.
+__BU_MAIN_COLOR_RESET="$(BU::Main::ModConfig::Colors::CheckTextColor        "$__BU_MAIN_COLOR_CODE_RESET")";		# Reset color to terminal's default text color.
+__BU_MAIN_COLOR_SUCCESS="$(BU::Main::ModConfig::Colors::CheckTextColor      "$__BU_MAIN_COLOR_CODE_SUCCESS")";		# Success text display color.
+__BU_MAIN_COLOR_VAR="$(BU::Main::ModConfig::Colors::CheckTextColor          "$__BU_MAIN_COLOR_CODE_VAR")";          # Variable, parameter or argument name.
+__BU_MAIN_COLOR_WARNING="$(BU::Main::ModConfig::Colors::CheckTextColor      "$__BU_MAIN_COLOR_CODE_WARNING")";		# Warning text display color.
 
 printf "%s" "$__BU_MAIN_COLOR_ERROR";		BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_ERROR'		"$__BU_MAIN_COLOR_ERROR"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorNameSubsCmd 'error messages')"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-10 ))";
 printf "%s" "$__BU_MAIN_COLOR_FUNCTION";	BU::ModuleInit::DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_FUNCTION'	"$__BU_MAIN_COLOR_FUNCTION"		'CMD' "$(BU::Main::ModConfig::Colors::PrintColorNameSubsCmd 'function names')"		"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-10 ))";
